# dev-assessments-fastapi

./: .gitignore  README.md  pyproject.toml
api/: __init__.py
api/home/: home.py
app/: server.py
core/: config.py
core/exceptions/: __init__.py
core/fastapi/dependencies/: __init__.py
