[tool.poetry]
name = "dev-assessments-api"
version = "0.1.0"
description = ""
authors = ["Fernando González Tostado <68973307+esponges@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic-settings = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
